--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "fix": "yarn run lint:fix && yarn run format:fix"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
-    "@google-cloud/speech": "^4.5.5",
-    "aws-sdk": "^2.953.0",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "fluent-ffmpeg": "^2.1.2"
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.18.0",
+    "@google-cloud/speech": "^6.7.0",
+    "aws-sdk": "^2.1692.0",
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "prism-media": "^1.3.5"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.18",
-    "@types/node": "^16.4.0",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/node": "^22.10.1",
+    "@typescript-eslint/parser": "^8.16.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.4.1",
+    "typescript": "^5.7.2"
   }
 }
